@@ -36,6 +36,7 @@ DDD 3.0 [in development]
     - Paned window management has been improved a lot.
     - DDD now works around a Motif 2.1/XFree86 bug that caused glyphs
       to disappear.  See the `cacheGlyphImages' resource for details.
+    - One-letter options like `-b BPS' or `-x FILE' work again.
 
     Changes in configuration and building:
     - LessTif 0.83 is supported (and now the default test environment
